--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -101,6 +101,10 @@ img {
     align-items: center;
     padding: 0 var(--2);
 }
+.navbar .cta-btns a {
+    text-decoration: none;
+    color: white;
+}
 
 .main-menu {
     display: flex;
